--- a/app/views/incident/new_mng.jade
+++ b/app/views/incident/new_mng.jade
@@ -88,7 +88,7 @@ block content
                                     .form-group
                                         label.col-sm-2.control-label 요청자명
                                         .col-sm-4
-                                            input.form-control(type='text', name='request_info', style = "ime-mode:active", required)
+                                            input#request_info.form-control(type='text', name='request_info', style = "ime-mode:active", required)
                                             input.form-control(type='hidden', name='incident[request_company_cd]')
                                             input.form-control(type='hidden', name='incident[request_company_nm]')
                                             input.form-control(type='hidden', name='incident[request_dept_cd]')
