--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -58,7 +58,7 @@ html
                   a.waves-effect(href='/incident') 처리진행현황
                 li
                   a.waves-effect(href='/search/user_qna') 자주묻는질문과답
-                form.navbar-left.app-search.pull-left.hidden-xs(role='search')
+                //form.navbar-left.app-search.pull-left.hidden-xs(role='search')
                   input.form-control.app-search-input(type='text', placeholder='Search...')
                   a(href='')
                     i.fa.fa-search
