--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -40,7 +40,7 @@ html
         // LOGO
         .topbar-left
           .text-center
-            a.logo(href='/index')
+            a.logo(href='/')
               span isu
               img(src='/isu/images/ci_isu_white.png', alt='ISU')
         // Navbar
