--- a/app/views/incident/new_mng.jade
+++ b/app/views/incident/new_mng.jade
@@ -94,7 +94,7 @@ block content
                                             input.form-control(type='hidden', name='incident[request_dept_cd]')
                                             input.form-control(type='hidden', name='incident[request_dept_nm]')
                                             input.form-control(type='hidden', name='incident[request_position_nm]')
-                                            input.form-control(type='hidden', name='incident[request_sabun]')
+                                            input.form-control(type='hidden', name='incident[request_id]')
                                             input.form-control(type='hidden', name='incident[request_email]')
                                             input.form-control(type='hidden', name='incident[request_hp_telno]')
                                             input.form-control(type='hidden', name='incident[request_office_tel_no]')
