--- a/app/views/manager/month_list.jade
+++ b/app/views/manager/month_list.jade
@@ -82,7 +82,7 @@ block content
                             form.form-horizontal.group-border-dashed(action='#')
                                 .form-group
                                     label.col-sm-2.control-label 검색년도
-                                    .col-sm-2
+                                    col-sm-2
                                         select.form-control
                                             option 2012
                                             option 2013
@@ -94,18 +94,6 @@ block content
                                             option 2019
                                             option 2020
                                             option 2021
-                                .form-group
-                                    label.col-sm-2.control-label 담당자
-                                    .col-sm-2
-                                        select.form-control
-                                            option 선택하지않음
-                                            option(selected='') 박선우
-                                            option 김상엽
-                                            option 항목1
-                                            option 항목2
-                                            option 항목3
-                                            option 항목4
-                                            option 항목5
                                     label.col-sm-2.control-label 상위업무
                                     .col-sm-2
                                         select.form-control
