#psw default.jade 수정

--- a/app/views/layouts/admin.jade
+++ b/app/views/layouts/admin.jade
@@ -85,7 +85,7 @@ html
                   li
                     a(href='/incident/new/문의하기')
                       | 문의하기  
-                      i.fa.fa-circle-o.text-pink.m-l-5
+                      //i.fa.fa-circle-o.text-pink.m-l-5
                   li
                     a(href='/incident') 처리진행현황
                   li
@@ -93,14 +93,14 @@ html
                   li
                     a(href='/search/user_list')
                       | 처리된 내용검색 
-                      i.fa.fa-circle-o.text-pink.m-l-5
+                      //i.fa.fa-circle-o.text-pink.m-l-5
               //그룹관리자, 업무관리자,업무담당자 오픈
               - if(session.user_flag ==1 || session.user_flag ==3 || session.user_flag ==4){ 
               li.has_sub
                 a.waves-effect.waves-primary(href='javascript:void(0);')
                   i.md.md-person
                   span  SD 담당자 
-                  span.label.label-success.pull-right 6
+                  //span.label.label-success.pull-right 6
                 ul.list-unstyled
                   li
                     a(href='/incident/new_mng') 상담접수(전화)
@@ -145,16 +145,16 @@ html
                   li
                     a(href='/company/list')
                       | 회사정보관리(외부) 
-                      i.fa.fa-circle-o.text-pink.m-l-5
+                      //i.fa.fa-circle-o.text-pink.m-l-5
                   li
                     a(href='/usermanage/')
                       | 사원정보관리(내외) 
-                      i.fa.fa-circle-o.text-pink.m-l-5
+                      //i.fa.fa-circle-o.text-pink.m-l-5
                   li
                     a(href='/companyBusiness/') 회사별 상위업무지정
                   li
                     a(href='/processGubun/') 처리구분 코드조회
-                  li
+                  //li
                     a(href='gw_sub4_7.html') 업무별 담당자현황
                   li
                     a(href='/oftenqna/') 자주묻는 질문과답
