--- a/app/views/layouts/user.jade
+++ b/app/views/layouts/user.jade
@@ -85,7 +85,7 @@ html
                   li
                     a(href='/incident/new/문의하기')
                       | 문의하기  
-                      i.fa.fa-circle-o.text-pink.m-l-5
+                      //i.fa.fa-circle-o.text-pink.m-l-5
                   li
                     a(href='/incident') 처리진행현황
                   li
@@ -93,7 +93,7 @@ html
                   li
                     a(href='/search/user_list')
                       | 처리된 내용검색 
-                      i.fa.fa-circle-o.text-pink.m-l-5
+                      //i.fa.fa-circle-o.text-pink.m-l-5
               li.has_sub
                 a.waves-effect.waves-primary(href='javascript:void(0);')
                   i.md.md-person
