--- a/app/views/manager/month_list.jade
+++ b/app/views/manager/month_list.jade
@@ -82,7 +82,7 @@ block content
                             form.form-horizontal.group-border-dashed(action='#')
                                 .form-group
                                     label.col-sm-2.control-label 검색년도
-                                    col-sm-2
+                                    .col-sm-2
                                         select.form-control
                                             option 2012
                                             option 2013
