--- a/app/views/layouts/user.jade
+++ b/app/views/layouts/user.jade
@@ -98,7 +98,8 @@ html
                 a.waves-effect.waves-primary(href='javascript:void(0);')
                   i.md.md-person
                   span  SD 담당자 
-                  span.label.label-success.pull-right 6
+                  //span.menu-arrow
+                  //span.label.label-success.pull-right 6
                 ul.list-unstyled
                   li
                     a(href='/incident/new_mng') 상담접수(전화)
