--- a/app/views/layouts/admin.jade
+++ b/app/views/layouts/admin.jade
@@ -100,6 +100,7 @@ html
                 a.waves-effect.waves-primary(href='javascript:void(0);')
                   i.md.md-person
                   span  SD 담당자 
+                  span.menu-arrow
                   //span.label.label-success.pull-right 6
                 ul.list-unstyled
                   li
