--- a/app/views/layouts/admin.jade
+++ b/app/views/layouts/admin.jade
@@ -79,7 +79,7 @@ html
               li.has_sub
                 a.waves-effect.waves-primary(href='javascript:void(0);')
                   i.md.md-now-widgets
-                  span  문의 및 담당자
+                  span  문의하기
                   span.menu-arrow
                 ul.list-unstyled
                   li
