--- a/app/views/layouts/admin.jade
+++ b/app/views/layouts/admin.jade
@@ -84,7 +84,7 @@ html
                 ul.list-unstyled
                   li
                     a(href='/incident/new/문의하기')
-                      | 문의하기  
+                      | 문의등록  
                       //i.fa.fa-circle-o.text-pink.m-l-5
                   li
                     a(href='/incident') 처리진행현황
