#KSY (style="display:block") 추가

--- a/app/views/layouts/admin.jade
+++ b/app/views/layouts/admin.jade
@@ -81,7 +81,7 @@ html
                   i.md.md-now-widgets
                   span  문의 및 담당자
                   span.menu-arrow
-                ul.list-unstyled
+                ul.list-unstyled(style="display:block")
                   li
                     a(href='/incident/new/문의하기')
                       | 문의하기  
